--- a/gb/20/10/31/n12515862.md
+++ b/gb/20/10/31/n12515862.md
@@ -1,17 +1,17 @@
 <a name="1" id="1" target="_blank"></a><span id="1"></span>
-<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/xqqvxg3980/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/xqqvxg3980/www/master/t/djy/1.jpg" title="大纪元"></a><a href="https://github.com/xqqvxg3980/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/xqqvxg3980/www/master/t/djy/3.jpg" title="国际新闻"></a><a href="https://github.com/xqqvxg3980/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/xqqvxg3980/www/master/t/djy/4.jpg" title="大陆新闻"></a><a href="https://github.com/xqqvxg3980/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/xqqvxg3980/www/master/t/djy/5.jpg" title="评论"></a><a href="https://github.com/xqqvxg3980/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/xqqvxg3980/www/master/t/djy/6.jpg" title="文化"></a><a href="https://github.com/xqqvxg3980/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/xqqvxg3980/www/master/t/djy/7.jpg" title="生活"></a><a href="https://github.com/xqqvxg3980/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/xqqvxg3980/www/master/t/djy/8.jpg" title="娱乐"></a><a href="https://github.com/xqqvxg3980/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/xqqvxg3980/www/master/t/djy/9.jpg" title="健康"><a href="https://github.com/xqqvxg3980/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/xqqvxg3980/www/master/t/djy/10a.jpg" title="独家"></a><a href="https://github.com/xqqvxg3980/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/xqqvxg3980/www/master/t/djy/12a.jpg" title="头条"></a></td></tr>
-<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/xqqvxg3980/www/blob/master/README.md?zsrh#1">翻墙</a> | <a target="_blank" href="https://github.com/xqqvxg3980/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/xqqvxg3980/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/xqqvxg3980/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/xqqvxg3980/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/xqqvxg3980/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/xqqvxg3980/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/xqqvxg3980/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/xqqvxg3980/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/xqqvxg3980/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/xqqvxg3980/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/xqqvxg3980/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/xqqvxg3980/djy/blob/master/gb/nf5562.md#1">伪火</a></p><p><a target="_blank" href="https://github.com/xqqvxg3980/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/xqqvxg3980/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/xqqvxg3980/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/xqqvxg3980/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/xqqvxg3980/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/xqqvxg3980/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/xqqvxg3980/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/xqqvxg3980/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/xqqvxg3980/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/xqqvxg3980/www/blob/master/README.md?zsrh#1">平台首页</a> | <a target="_blank" href="https://github.com/xqqvxg3980/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/xqqvxg3980/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/xqqvxg3980/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/xqqvxg3980/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
+<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/hxcaik307/djy/blob/master/gb/nf1351518.md#1"><img src="https://raw.githubusercontent.com/hxcaik307/www/master/t/djy/1.jpg" title="大纪元首页" alt="大纪元首页"></a><a href="https://github.com/hxcaik307/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/hxcaik307/www/master/t/djy/3.jpg" title="国际新闻" alt="国际新闻"></a><a href="https://github.com/hxcaik307/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/hxcaik307/www/master/t/djy/4.jpg" title="大陆新闻" alt="大陆新闻"></a><a href="https://github.com/hxcaik307/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/hxcaik307/www/master/t/djy/5.jpg" title="大纪元评论" alt="大纪元评论"></a><a href="https://github.com/hxcaik307/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/hxcaik307/www/master/t/djy/6.jpg" title="传统文化" alt="传统文化"></a><a href="https://github.com/hxcaik307/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/hxcaik307/www/master/t/djy/7.jpg" title="生活消费" alt="生活消费"></a><a href="https://github.com/hxcaik307/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/hxcaik307/www/master/t/djy/8.jpg" title="娱乐休闲" alt="娱乐休闲"></a><a href="https://github.com/hxcaik307/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/hxcaik307/www/master/t/djy/9.jpg" title="健康" alt="健康"></a><a href="https://github.com/hxcaik307/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/hxcaik307/www/master/t/djy/10a.jpg" title="独家" alt="独家"></a><a href="https://github.com/hxcaik307/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/hxcaik307/www/master/t/djy/12a.jpg" title="头条要闻" alt="头条要闻"></a></td></tr>
+<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/hxcaik307/www/blob/master/README.md?zsrh#1">翻墙</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/hxcaik307/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf5562.md#1">伪火</a></p><p><a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/hxcaik307/www/blob/master/README.md?zsrh#1">平台首页</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
 <tr><td VALIGN=TOP width="626"><h2 align=center>明志书院庆典文化季 泰山70周年纪念</h2>
 <img width="600" src="https://i.epochtimes.com/assets/uploads/2020/10/466814-600x400.jpg" />
 <h6>市长侯友宜、贵宾与受颁赠智慧笔学子合影（宋顺澈／大纪元）
 </h6>
 <hr>
-<p>【大纪元2020年10月31日讯】（大纪元记者宋顺澈台湾新北市报导）泰山<ahref="https://github.com/xqqvxg3980/djy/blob/master/gb/tag/%E6%98%8E%E5%BF%97%E4%B9%A6%E9%99%A2.md#1">明志书院</a>于31日〈黄历9月15日〉举行“明志书院庆典”、“客家文化季”暨“泰山设置70周年”，由泰山国乐团演奏古典乐曲揭开序幕，接着由市长侯友宜担任主祭官，主持明志书院年度祭典，祭典之后市长侯友宜亲自颁赠优秀学子智慧笔，让学子们在学业上智慧大开，顺利完成整个学业，当地仕绅暨许多贵宾参与此庆典，整个会场人潮滚滚。</p>
-<p>区公所表示，欣逢<ahref="https://github.com/xqqvxg3980/djy/blob/master/gb/tag/%E6%98%8E%E5%BF%97%E4%B9%A6%E9%99%A2.md#1">明志书院</a>朱熹夫子890周年圣诞、明志书院创建257周年及泰山设置70周年，新北市客家事务局与泰山区公所扩大举办“109年明志书院庆典、客家文化季暨泰山设置70周年等系列活动”</p>
-<figure id="attachment_12515868" style="width: 600px" class="wp-caption aligncenter"><ahref="https://i.epochtimes.com/assets/uploads/2020/10/466818.jpg"><img class="wp-image-12515868 size-large" src="https://i.epochtimes.com/assets/uploads/2020/10/466818-600x397.jpg" alt="" width="600" b="397" /></a><figcaption class="wp-caption-text">纪念商品（宋顺澈／大纪元）</figcaption></figure>
-<figure id="attachment_12515867" style="width: 600px" class="wp-caption aligncenter"><ahref="https://i.epochtimes.com/assets/uploads/2020/10/466817.jpg"><img class="wp-image-12515867 size-large" src="https://i.epochtimes.com/assets/uploads/2020/10/466817-600x397.jpg" alt="" width="600" b="397" /></a><figcaption class="wp-caption-text">后排左1起明志书院管理委员会主任委员陈春祈、区长林庆丰与国乐团团员合影（宋顺澈／大纪元）</figcaption></figure>
-<figure id="attachment_12515866" style="width: 600px" class="wp-caption aligncenter"><ahref="https://i.epochtimes.com/assets/uploads/2020/10/466816.jpg"><img class="wp-image-12515866 size-large" src="https://i.epochtimes.com/assets/uploads/2020/10/466816-600x397.jpg" alt="" width="600" b="397" /></a><figcaption class="wp-caption-text">右2黎明技术学院校长林明芳、区长林庆丰与贵宾们合影（宋顺澈／大纪元</figcaption></figure>
-<figure id="attachment_12515865" style="width: 600px" class="wp-caption aligncenter"><ahref="https://i.epochtimes.com/assets/uploads/2020/10/466815.jpg"><img class="wp-image-12515865 size-large" src="https://i.epochtimes.com/assets/uploads/2020/10/466815-600x397.jpg" alt="" width="600" b="397" /></a><figcaption class="wp-caption-text">文创纪念商品智慧笔、笔盒、天泉水、天泉米、泰山70周年纪念盘、智慧书等商品（宋顺澈／大纪元）</figcaption></figure>
+<p>【大纪元2020年10月31日讯】（大纪元记者宋顺澈台湾新北市报导）泰山<ahref="https://github.com/hxcaik307/djy/blob/master/gb/tag/%E6%98%8E%E5%BF%97%E4%B9%A6%E9%99%A2.md#1">明志书院</a>于31日〈黄历9月15日〉举行“明志书院庆典”、“客家文化季”暨“泰山设置70周年”，由泰山国乐团演奏古典乐曲揭开序幕，接着由市长侯友宜担任主祭官，主持明志书院年度祭典，祭典之后市长侯友宜亲自颁赠优秀学子智慧笔，让学子们在学业上智慧大开，顺利完成整个学业，当地仕绅暨许多贵宾参与此庆典，整个会场人潮滚滚。</p>
+<p>区公所表示，欣逢<ahref="https://github.com/hxcaik307/djy/blob/master/gb/tag/%E6%98%8E%E5%BF%97%E4%B9%A6%E9%99%A2.md#1">明志书院</a>朱熹夫子890周年圣诞、明志书院创建257周年及泰山设置70周年，新北市客家事务局与泰山区公所扩大举办“109年明志书院庆典、客家文化季暨泰山设置70周年等系列活动”</p>
+<figure id="attachment_12515868" aria-describedby="caption-attachment-12515868" style="width: 600px" class="wp-caption aligncenter"><a target="_blank" href="https://i.epochtimes.com/assets/uploads/2020/10/466818.jpg"><img class="wp-image-12515868 size-large" src="https://i.epochtimes.com/assets/uploads/2020/10/466818-600x397.jpg" alt="" width="600" b="397" /></a><figcaption id="caption-attachment-12515868" class="wp-caption-text">纪念商品（宋顺澈／大纪元）</figcaption></figure>
+<figure id="attachment_12515867" aria-describedby="caption-attachment-12515867" style="width: 600px" class="wp-caption aligncenter"><a target="_blank" href="https://i.epochtimes.com/assets/uploads/2020/10/466817.jpg"><img class="wp-image-12515867 size-large" src="https://i.epochtimes.com/assets/uploads/2020/10/466817-600x397.jpg" alt="" width="600" b="397" /></a><figcaption id="caption-attachment-12515867" class="wp-caption-text">后排左1起明志书院管理委员会主任委员陈春祈、区长林庆丰与国乐团团员合影（宋顺澈／大纪元）</figcaption></figure>
+<figure id="attachment_12515866" aria-describedby="caption-attachment-12515866" style="width: 600px" class="wp-caption aligncenter"><a target="_blank" href="https://i.epochtimes.com/assets/uploads/2020/10/466816.jpg"><img class="wp-image-12515866 size-large" src="https://i.epochtimes.com/assets/uploads/2020/10/466816-600x397.jpg" alt="" width="600" b="397" /></a><figcaption id="caption-attachment-12515866" class="wp-caption-text">右2黎明技术学院校长林明芳、区长林庆丰与贵宾们合影（宋顺澈／大纪元</figcaption></figure>
+<figure id="attachment_12515865" aria-describedby="caption-attachment-12515865" style="width: 600px" class="wp-caption aligncenter"><a target="_blank" href="https://i.epochtimes.com/assets/uploads/2020/10/466815.jpg"><img class="wp-image-12515865 size-large" src="https://i.epochtimes.com/assets/uploads/2020/10/466815-600x397.jpg" alt="" width="600" b="397" /></a><figcaption id="caption-attachment-12515865" class="wp-caption-text">文创纪念商品智慧笔、笔盒、天泉水、天泉米、泰山70周年纪念盘、智慧书等商品（宋顺澈／大纪元）</figcaption></figure>
 <p>泰山早期因有交通与水利之便，成为清代移民耕垦开荒的首选，是北台湾最早开发的地区之一。客家文化强调耕读传家，先贤胡焯猷为发扬客家义学精神，乃捐赠80多甲土地兴办“北台首学”明志书院。新北市客家局局长林素琴表示，为发扬客家族群“晴耕雨读”的文化传统，邀请新北市长侯友宜于祭祀典礼之后为智慧笔过炉，并赠送予20位国小至大专校院的杰出学生，祝福学子学业顺利，也期勉学子传承“晴耕雨读”的客家精神，不论身处在什么样的环境中都能够奋发向上。</p>
 <p>泰山区长林庆丰表示，泰山区各团体准备了客家美食供参访民众品尝，另有泰山客属会以客家歌谣、二胡琴韵传达客家美声。为了推行全方位美术教育，也举办“发现泰山”写生比赛，鼓励区内学子透过画纸，将每个人心中的泰山印象与风貌，描绘成缤纷精彩的作品，现场准备90组的精美小礼物赠送给报名参赛的学生。</p>
 <p>参与贵宾包括民政局长柯庆忠、泰山区长林庆丰、南亚塑总管理处总经理林志善、黎明技术学院校长林明芳、立委洪孟楷、市议员宋明宗、明志书院管理委员会主任委员陈春祈、树林区客家艺文协会理事长陈桂英、泰山区各个社区发展协会理事长、当地仕绅、数十位里长参与此一重要庆典。</p>
@@ -25,48 +25,47 @@
 
 
 <strong>相关新闻：</strong>
-<li><a href="https://github.com/xqqvxg3980/djy/blob/master/gb/6/3/30/n1271321.md#1">泰山明志书院 移民兴学北台首院</a></li>
-<li><a href="https://github.com/xqqvxg3980/djy/blob/master/gb/10/12/18/n3116839.md#1">台北泰山 ．顶泰山岩．崎头步道．义学坑步道．明志书院</a></li>
-<li><a href="https://github.com/xqqvxg3980/djy/blob/master/gb/17/3/1/n8862068.md#1">明志书院停车场大整修   将创“两个第一”</a></li>
-<li><a href="https://github.com/xqqvxg3980/djy/blob/master/gb/20/10/27/n12505576.md#1">暂缓教师打公费流感疫苗 到货后恢复接种</a></li>
-<li><a href="https://github.com/xqqvxg3980/djy/blob/master/gb/20/10/24/n12499202.md#1">各路狮王问鼎泰山 鸣鼓开赛震响四方</a></li>
-<li><a href="https://github.com/xqqvxg3980/djy/blob/master/gb/20/10/21/n12491144.md#1">国际狮子会300B2区健行 糖尿病防治</a></li>
-<li><a href="https://github.com/xqqvxg3980/djy/blob/master/gb/20/10/18/n12484255.md#1">流感疫苗不足 侯友宜：盼民众体谅</a></li>
-<li><a href="https://github.com/xqqvxg3980/djy/blob/master/gb/20/10/17/n12482739.md#1">三峡区农会120周年庆 碧螺春蜜香红茶</a></li>
-<li><a href="https://github.com/xqqvxg3980/djy/blob/master/gb/20/10/15/n12478381.md#1">大显狮威问鼎泰山 泰山狮王文化节将登场</a></li>
-<li><a href="https://github.com/xqqvxg3980/djy/blob/master/gb/20/10/14/n12475422.md#1">汐东捷运与基捷整合兴建 侯友宜：新北会扛责</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/6/3/30/n1271321.md#1">泰山明志书院 移民兴学北台首院</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/10/12/18/n3116839.md#1">台北泰山 ．顶泰山岩．崎头步道．义学坑步道．明志书院</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/17/3/1/n8862068.md#1">明志书院停车场大整修   将创“两个第一”</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/3/2/n13615875.md#1">樱花季春游林口 白冰冰领衔众巨星登场</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/22/n13596587.md#1">基隆捷运定案 侯友宜拜托苏揆重视汐东捷运</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/21/n13593585.md#1">泰山辅大医院救命之道开通 救护车通行</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/18/n13586973.md#1">北大主题游戏场 打造万坪森林冒险乐园</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/16/n13581455.md#1">高中第1节前弹性学习 新北已试办过成效良好</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/16/n13580886.md#1">感恩五股贺圣宫庇佑 捐复康巴士回馈社会</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/16/n13581029.md#1">携手科大技职培育 技职自主学习实作丰富</a></li>
 <hr>
 
 
 <strong>编辑推荐：</strong>
-<li><a href="https://github.com/onzhi266/djy/blob/master/gb/20/2/22/n11887949.md#1">美参议员：中共刻意控制新冠病毒信息流动</a></li>
-<li><a href="https://github.com/tsiac2612/djy/blob/master/gb/19/12/18/n11729917.md#1" target="_blank">袁斌：“南京事件”与所谓“四一二反革命政变”</a></li><li><a href="https://github.com/xqqvxg3980/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank">揭开活摘器官黑幕</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/19/5/14/n11258498.md#1" target="_blank">二十年电子游戏狂 因修炼脱胎换骨</a></li>
+<li><a href="https://github.com/upjkzu3674/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank">马克思的成魔之路</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/19/11/11/n11648921.md#1" target="_blank">林辉：国家足球队头号前锋文革缘何自杀？</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/17/9/12/n9623688.md#1" target="_blank">比利时母亲30年车祸创痛 读转法轮4个月消失</a></li>
 <hr>
 
 <strong>热门新闻：</strong>
-<li><a href="https://github.com/xqqvxg3980/djy/blob/master/gb/20/10/22/n12494562.md#1">张爱玲的家世 晚清历史里的先人</a></li>
-<li><a href="https://github.com/xqqvxg3980/djy/blob/master/gb/20/9/19/n12415906.md#1">朋友隔天才回讯息 这行为犯了多大禁忌？</a></li>
-<li><a href="https://github.com/xqqvxg3980/djy/blob/master/gb/20/9/30/n12442832.md#1">《圣经》与《推背图》预言的应验与变换4</a></li>
-<li><a href="https://github.com/xqqvxg3980/djy/blob/master/gb/20/10/11/n12468150.md#1">再生少年胜五郎 说出冥界转生过程钜细靡遗</a></li>
-<li><a href="https://github.com/xqqvxg3980/djy/blob/master/gb/20/10/19/n12485542.md#1">为何初婚称“结发”再娶叫“续弦”？</a></li>
-<li><a href="https://github.com/xqqvxg3980/djy/blob/master/gb/20/10/30/n12514422.md#1">【珍言真语】马仲仪：港康码将上路 免检有漏洞</a></li>
-<li><a href="https://github.com/xqqvxg3980/djy/blob/master/gb/20/10/30/n12514896.md#1">车评：双色多变化 2020 Nissan Kicks SR</a></li>
-<li><a href="https://github.com/xqqvxg3980/djy/blob/master/gb/20/10/30/n12514672.md#1">【新闻看点】备战动员？五中公报泄习心头大患</a></li>
-<li><a href="https://github.com/xqqvxg3980/djy/blob/master/gb/20/10/29/n12510381.md#1">福克斯主持：邮件被打开 亨特机密文件消失</a></li>
-<li><a href="https://github.com/xqqvxg3980/djy/blob/master/gb/20/10/29/n12509877.md#1">【翻墙必看】中共五中全会一片死寂</a></li>
-<li><a href="https://github.com/xqqvxg3980/djy/blob/master/gb/20/10/29/n12511777.md#1">【役情最前线】涉孙力军案 央视女主播证实出事</a></li>
-<li><a href="https://github.com/xqqvxg3980/djy/blob/master/gb/20/10/28/n12509127.md#1">过世父亲留下百亿家产 黄子韬频晒奢侈品惹议</a></li>
-<li><a href="https://github.com/xqqvxg3980/djy/blob/master/gb/20/10/29/n12511870.md#1">翻拍《棋灵王》被批毁童年 中共大内宣引众怒</a></li>
-<li><a href="https://github.com/xqqvxg3980/djy/blob/master/gb/20/10/29/n12512090.md#1">明星追星 江疏影贺偶像玄彬获奖“实至名归”</a></li>
-<li><a href="https://github.com/xqqvxg3980/djy/blob/master/gb/20/10/29/n12509634.md#1">《后翼弃兵》影评：天才女棋手的精彩传奇</a></li>
-<li><a href="https://github.com/xqqvxg3980/djy/blob/master/gb/20/10/29/n12511714.md#1">40岁安以轩二胎得女 称娃宝长得特别好看</a></li>
-<li><a href="https://github.com/xqqvxg3980/djy/blob/master/gb/20/10/29/n12509968.md#1">主人忘记带走 小狗花26天走60多公里回家</a></li>
-<li><a href="https://github.com/xqqvxg3980/djy/blob/master/gb/20/10/26/n12501857.md#1">高血脂有3症状！这些食物清胆固醇 让血液变干净</a></li>
-<li><a href="https://github.com/xqqvxg3980/djy/blob/master/gb/20/10/30/n12513083.md#1">英男童5点起床习惯被取笑 却救全家人性命</a></li>
-<li><a href="https://github.com/xqqvxg3980/djy/blob/master/gb/20/10/30/n12512744.md#1">曾多次准确预测大选 犹太拉比：川普会连任</a></li>
-<li><a href="https://github.com/xqqvxg3980/djy/blob/master/gb/20/10/30/n12513272.md#1">濒死男子敲天堂大门 被告知时辰未到</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/14/n13576716.md#1">【百年真相】亲历者揭秘“1952细菌战”真相</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/25/n13605590.md#1">【未解之谜】地球磁极倒转进行中??</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/28/n13610168.md#1">【神韵作品】唐瑞讲故事｜朗读｜小熊维尼第一章</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/22/n13597113.md#1">【百年真相】现代文字狱 胡风如何成了反革命？</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/17/n13582752.md#1">【奇事】两位卜算大师看出对方死期 但两人皆无法避过</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/3/1/n13614217.md#1">【财商天下】被踢出SWIFT 俄金融迅速“休克”</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/3/1/n13614863.md#1">《梁祝》小提琴协奏曲</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/3/2/n13615200.md#1">吴明德：中共暗撑俄侵乌 恐成国际大输家</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/26/n13607661.md#1">【更新2.27】乌总统：接下来24小时至关重要</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/28/n13610320.md#1">乌克兰用无人机摧毁俄导弹系统 视频曝光</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/27/n13609576.md#1">俄银行被切断SWIFT系统 中共角色更尴尬</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/27/n13609572.md#1">纳豆或暂退萤光幕一年 经纪人曝他最新病况</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/27/n13609465.md#1">看海狮资料一目十行过目不忘 杨幂展超强记忆力</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/28/n13612216.md#1">港星吴孟达过世一周年 长眠大马原因曝光</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/3/1/n13614888.md#1">赴韩拍戏皮肤长满红斑 范冰冰素颜照吓坏网友</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/3/1/n13614510.md#1">香港TVB艺人祝文君罹癌离世 终年55岁</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/28/n13612112.md#1">更强Omicron变种出现？致病性、传播力一次看</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/23/n13599631.md#1">疫苗、口罩难结束疫情 这一件事或成关键</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/26/n13607140.md#1">睡眠十大好处 提高脑力、抗衰老都在内</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/27/n13608014.md#1">多吃橙色食物 不只护眼 还有这些强大好处</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/27/n13607888.md#1">调查：十对夫妻中三对存在“财务不忠”</a></li>
 <hr>
 
-<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/xqqvxg3980/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/xqqvxg3980/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/20/10/31/n12515862.htm">明志书院庆典文化季 泰山70周年纪念</a></p><hr>
+<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/hxcaik307/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/hxcaik307/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/20/10/31/n12515862.htm">明志书院庆典文化季 泰山70周年纪念</a></p><hr>
 
-<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://chart.apis.google.com/chart?cht=qr&chs=240x240&choe=UTF-8&chld=M|2&chl=https://github.com/xqqvxg3980/djy/blob/master/gb/20/10/31/n12515862.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/xqqvxg3980/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/xqqvxg3980/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/xqqvxg3980/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/xqqvxg3980/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/xqqvxg3980/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/xqqvxg3980/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/xqqvxg3980/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/xqqvxg3980/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/xqqvxg3980/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/xqqvxg3980/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/xqqvxg3980/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/xqqvxg3980/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/xqqvxg3980/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/xqqvxg3980/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/xqqvxg3980/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/xqqvxg3980/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/xqqvxg3980/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/xqqvxg3980/djy/master/gb/300/st1.jpg" title="关注3亿人三退"  alt="关注3亿人三退"></a><br><a href="https://github.com/xqqvxg3980/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/xqqvxg3980/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/xqqvxg3980/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/xqqvxg3980/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/xqqvxg3980/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/xqqvxg3980/djy/master/gb/300/sj1.jpg" title="303万人举报江泽民"  alt="303万人举报江泽民"></a><br><a href="https://github.com/xqqvxg3980/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/xqqvxg3980/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/xqqvxg3980/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/xqqvxg3980/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/xqqvxg3980/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/xqqvxg3980/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/xqqvxg3980/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/xqqvxg3980/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/xqqvxg3980/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/xqqvxg3980/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/xqqvxg3980/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/xqqvxg3980/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/xqqvxg3980/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/xqqvxg3980/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/xqqvxg3980/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/xqqvxg3980/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/xqqvxg3980/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/xqqvxg3980/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/xqqvxg3980/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/xqqvxg3980/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/xqqvxg3980/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/xqqvxg3980/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/xqqvxg3980/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/xqqvxg3980/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
+<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://chart.apis.google.com/chart?cht=qr&chs=240x240&choe=UTF-8&chld=M|2&chl=https://github.com/hxcaik307/djy/blob/master/gb/20/10/31/n12515862.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/hxcaik307/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/hxcaik307/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/st1.jpg" title="关注三亿人三退"  alt="关注三亿人三退"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/sj1.jpg" title="三百多万人举报江泽民"  alt="三百多万人举报江泽民"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/hxcaik307/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
